--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ body {
 // COLORS =====================================================
 $body-color         : #fff;
 $text-color         : #222;
-$base-color         : #be1525;    
+$base-color         : #3e3a5a;    
 $comp-color         : spin($base-color, 180);
 $border-color       : #ddd;
 $white              : #fff;
