--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,20 +15,25 @@
 
 {% include browser-upgrade.html %}
 
-{% if page.image.feature %}<header class="masthead">
+{% if page.image.feature %}
+<header class="masthead">
 	{% if site.logo != null %}
 		<div class="wrap">
-			<a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.baseurl }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated fadeInDown"></a>
+			<a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}">
+				<img src="//logo-js.herokuapp.com/rentswatch/white/transparent/5b5073" width="300" height="300" alt="{{ site.title }} logo">
+			</a>
 		</div>
 	{% endif %}
 </header><!-- /.masthead -->
-{% else %}<header class="masthead">
+{% else %}
+<header class="masthead">
 	<div class="wrap">
       {% if site.logo != null %}
-  		<a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.baseurl }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated fadeInDown"></a>
+	  		<a href="{{ site.baseurl }}/" class="site-logo" rel="home" title="{{ site.title }}">
+					<img src="//logo-js.herokuapp.com/rentswatch/white/transparent/5b5073" width="300" height="300" alt="{{ site.title }} logo">
+				</a>
       {% endif %}
-      <h1 class="site-title animated fadeIn"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
-		<h2 class="site-description animated fadeIn" itemprop="description">{{ site.description }}</h2>
+		<h2 class="site-description" itemprop="description">{{ site.description }}</h2>
 	</div>
 </header><!-- /.masthead -->{% endif %}
 
