--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,24 +3,14 @@
    ========================================================================== */
 
 .masthead {
-  margin-top: 40px;
+  padding-top: 40px;
+  background: $base-color;
   @include clearfix;
   @include media($medium) {
     margin-top: 0;
   }
   .wrap {
     text-align: center;
-    max-width: em(440);
-    padding-right: 20px;
-    padding-left: 20px;
-    @include media($medium) {
-      max-width: em(728);
-      padding-right: 60px;
-      padding-left: 60px;
-    }
-    @include media($large) {
-      max-width: em(960);
-    }
   }
 }
 
@@ -30,17 +20,17 @@
 
 .site-logo {
   img {
-    width: 100px;
+    width: 150px;
 
     @include animation-duration(1s);
     @include animation-delay(.05s);
 
     @include media($medium) {
-      width: 150px;
+      width: 200px;
     }
 
     @include media($large) {
-      width: 200px;
+      width: 250px;
     }
   }
 }
@@ -50,9 +40,9 @@
    ========================================================================== */
 
 .site-title {
+  margin-top: 0;
   margin-bottom: 0;
-  @include animation-duration(1s);
-    @include animation-delay(.75s);
+  background:$body-color;
   a {
     color: $black;
   }
@@ -64,13 +54,18 @@
 
 .site-description {
   margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 1em;
+  padding-bottom: 1em;
+
   font-family: $alt-font;
-  @include font-size(16);
   font-weight: 400;
   font-style: italic;
-  @include animation-duration(1s);
-  @include animation-delay(1s);
+  background:$body-color;
+
+  font-size: 16px;
+
   @include media($medium) {
-    @include font-size(20);
+    font-size: 20px;
   }
 }
