--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -5,13 +5,15 @@
 .navigation-wrapper {
   text-align: center;
   @include clearfix;
+  background: $base-color;
+
   ul {
     display: inline-block;
     width: 100%;
     vertical-align: top;
     margin: 0 0 50px;
     padding: 4px 20px;
-    background-color: $base-color;
+    background-color:#D35F5F;
     @include media($medium) {
       width: auto;
       @include rounded(0 0 5px 5px);
@@ -90,7 +92,7 @@
   vertical-align: top;
   margin: 0;
   padding: 6px 20px;
-  background-color: $base-color;
+  background-color:#D35F5F;
   height: 44px;
   @include rounded(0);
   @include media($medium) {
