--- a/_includes/open-graph.html
+++ b/_includes/open-graph.html
@@ -8,7 +8,7 @@
 <meta name="twitter:image" content="{{ site.baseurl }}/images/{{ page.image.feature }}">
 {% else %}
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="{% if page.image.thumb %}{{ site.baseurl }}/images/{{ page.image.thumb }}{% else %}{{ site.baseurl }}/images/{{ site.logo }}{% endif %}">
+<meta name="twitter:image" content="{% if page.image.thumb %}{{ site.baseurl }}/images/{{ page.image.thumb }}{% else %}{{ site.baseurl }}/images/site-logo.png{% endif %}">
 {% endif %}
 <!-- Open Graph -->
 <meta property="og:locale" content="{{ site.locale }}">
